--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <script type="module" src="./test/demo.web.ts"></script>
+    <!-- <script type="module" src="./test/demo.web.ts"></script> -->
+    <script src="https://unpkg.com/chinese-ts"></script>
 
     <!-- UMD Module Demo -->
     <!-- <script src="./dist/index.min.js"></script>
