--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <!-- <script type="module" src="./test/demo.web.ts"></script> -->
-    <script src="https://unpkg.com/chinese-ts"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chinese-ts/dist/index.umd.cjs"></script> -->
 
     <!-- UMD Module Demo -->
-    <!-- <script src="./dist/index.min.js"></script>
+    <script src="./dist/index.iife.js"></script>
     <script>
-      console.log(UTILS.helloWorld());
-    </script> -->
+      console.log(CHINESE_TS.getAllCityAlias());
+    </script>
   </body>
 </html>
